--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>福如东海 寿比南山 - 王老先生八秩寿宴</title>
     <!-- 微信分享优化 -->
     <meta property="og:title" content="寿宴邀请函">
-    <meta property="og:image" content="./images/wechat-thumb.jpg">
+    <meta property="og:image" content="../images/wechat-thumb.jpg">
     <meta name="description" content="诚邀您参加王老先生八秩寿诞">
     <style>
         :root {
@@ -138,7 +138,7 @@
         <section class="section header" id="cover">
             <div class="deco-border">
                 <h1>福寿双全宴</h1>
-                < img src="./images/lotus.png" alt="吉祥图案" class="deco-img">
+                < img src="/images/lotus.png" alt="吉祥图案" class="deco-img">
                 <h2>恭请莅临王公讳志刚老先生八秩寿诞</h2>
                 <p>二零二三年十月十五日 吉时</p >
                 <div id="countdown">正在计算倒计时...</div>
