--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <section class="section header" id="cover">
             <div class="deco-border">
                 <h1>福寿双全宴</h1>
-                < img src="images/lotus.png" alt="吉祥图案" class="deco-img">
+                < img src="images/lotus.png" alt="吉祥图案" >
                 <h2>恭请莅临王公讳志刚老先生八秩寿诞</h2>
                 <p>二零二三年十月十五日 吉时</p >
                 <div id="countdown">正在计算倒计时...</div>
