--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <section class="section header" id="cover">
             <div class="deco-border">
                 <h1>福寿双全宴</h1>
-                <img src="images/lotus.png"></img>
+                <img src="images/lotus.png"alt="第一张照片" class="deco-img">
                 <h2>恭请莅临陈公讳老先生八秩寿诞</h2>
                 <p>二零二五年十月十五日 吉时</p >
                 <div id="countdown">正在计算倒计时...</div>
