--- a/index.html
+++ b/index.html
@@ -173,12 +173,10 @@
                 <h3>宴会地址</h3>
                 <p>重庆市江津区某某大酒店3楼宴会厅</p >
                 <!-- 地图容器 -->
-                <div id="map" style="height:300px; margin:20px 0; background:#eee; border-radius:10px;">
-                    <script src="https://api.map.baidu.com/api?v=3.0&ak=iEVV6LLDW0pM3QgVeP12AZ4V06ZrN3jO"></script>
-                    <p style="text-align:center; padding:50px 0;">地图加载中...</p >
-                </div>
+                <div id="map" style="height:300px; margin:20px 0; border-radius:10px;">
+                    <img src="images/map.jpg" alt="定位截图" class="deco-img"></div>
                 <a href=" " class="cta-button">
-                    点击导航
+                    返回顶部
                 </a >
             </div>
         </section>
